--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -427,5 +427,8 @@ body {
       });
     </script>
 
+<script src="{{ "tc-click-to-zoom.js" | asset_url }}" defer></script>
+
+
   </body>
 </html>
