--- a/sections/tc-manual-section.liquid
+++ b/sections/tc-manual-section.liquid
@@ -1,14 +1,18 @@
-{%- style -%}
-
-  .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
+{% style %}
+  swiper-container {
+    --swiper-navigation-color: black;
+    --swiper-navigation-size: 3rem;
+    --swiper-navigation-sides-offset: 2rem;
+    border-radius: 0.5rem;
   }
 
-  
-  .manual-step__heading strong {
-    font-weight: bold;
-    margin-right: 2rem;
+  swiper-slide img {
+    border-radius: 0.5rem;
+  }
+
+  .section-padding-{{ section.id }} {
+    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
+    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
   }
 
   .manual-step {
@@ -16,11 +20,24 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+  }
 
+  .manual-step * strong {
+    font-weight: bold
   }
 
 
-  .manual-step__image, .manual-step__content {
+  .manual-step__heading {
+    margin-bottom: 2rem;
+  }
+
+  .manual-step__heading strong {
+    font-weight: bold;
+    margin-right: 2rem;
+  }
+
+  .manual-step__image,
+  .manual-step__content {
     width: 100%;
     flex-shrink: 1;
   }
@@ -29,48 +46,67 @@
     width: 100%;
   }
 
+  .manual-step__content ul {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
   .manual-step-bullet {
     display: flex;
-    /* align-items: center; */
     gap: 1.5rem;
     font-size: 1.5rem;
     padding: 1rem 0;
   }
 
-.manual-step-bullet__bullet {
-  display: grid;
-  font-weight: bold;
-  place-items: center;
-  width: 2.5rem;
-  height: 2.5rem;
-  flex-shrink: 0;
-  border: 1px solid;
-  border-color: current;
-  border-radius: 999px;
-  font-size: 1.25rem;
-  background-color: white;
-}
+  .manual-step-bullet__bullet {
+    display: grid;
+    font-weight: bold;
+    place-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    flex-shrink: 0;
+    border: 1px solid;
+    border-color: current;
+    border-radius: 999px;
+    font-size: 1.25rem;
+    background-color: white;
+    margin-left: 1rem;
+  }
 
-.manual-step-bullet__default {}
+  .manual-step-bullet__bullet svg {
+    width: 1.5rem;
+  }
+
+  .manual-step-bullet__default {}
 
 .manual-step-bullet__caution {
+  background-color: var(--tw-color-amber-50);
+  color: var(--tw-color-amber-800);
+  margin-top: auto;
+}
+
+.manual-step-bullet__caution .manual-step-bullet__bullet {
+  background-color: var(--tw-color-amber-600);
+  color: var(--tw-color-amber-50);
+  border: none;
 }
 
 .manual-step-bullet__tip {
+  background-color: var(--tw-color-blue-50);
+  color: var(--tw-color-blue-800);
+  margin-top: auto;
 }
 
-.manual-step-content ul {
-  display: flex;
-  flex-direction: column
-}
-
-.manual-step__heading {
-    margin-bottom: 2rem;
+.manual-step-bullet__tip .manual-step-bullet__bullet {
+  background-color: var(--tw-color-blue-600);
+  color: var(--tw-color-blue-50);
+  border: none;
 }
 
 /* md (min-width: 768px) */
 @media (min-width: 768px) {
-  .section-{{ section.id }}-padding {
+  .section-padding-{{ section.id }} {
     padding-top: {{ section.settings.padding_top }}px;
     padding-bottom: {{ section.settings.padding_bottom }}px;
   }
@@ -80,11 +116,13 @@
   }
 
   .manual-step-bullet {
-    /* background: #f9f9f9; */
     border-radius: 0.5rem;
-    /* margin-bottom: 2rem; */
     padding-left: 1rem;
-    padding-right: 1rem
+    padding-right: 1rem;
+  }
+
+  .manual-step-bullet__bullet {
+    margin-left: 0;
   }
 
   .manual-step__image {
@@ -95,58 +133,78 @@
   .manual-step__content {
     width: 40%;
     flex-shrink: 1;
-    padding: 0 2rem 2rem;
+    padding: 0 2rem;
   }
-
 }
 
 /* lg (min-width: 1024px) */
 @media (min-width: 1024px) {}
 
 /* xl (min-width: 1280px) */
-@media (min-width: 1280px) {
-;
-
-}
+@media (min-width: 1280px) {}
 
 /* 2xl (min-width: 1536px) */
-@media (min-width: 1536px) {
-;
+@media (min-width: 1536px) {}
+{% endstyle %}
 
-}
-
-
-{%- endstyle -%}
 
 <section
   {% if section.settings.anchor != blank %}
   id="{{section.settings.anchor}}"
   {% endif %}
-  class="isolate section-{{ section.id }} section-{{ section.id }}-padding color-{{ section.settings.color_scheme }}">
+  class="isolate section-{{ section.id }} section-padding-{{ section.id }} color-{{ section.settings.color_scheme }}">
   {% if section.settings.background_image != blank %}
     {% assign bg_image_class = "background-image-" | append: section.id %}
     <div class="tw-absolute tw-w-full tw-top-0 tw-left-0 tw-h-full tw-overflow-hidden">{{ section.settings.background_image | image_url: width: 1500 | image_tag: class: bg_image_class }}</div>
   {% endif %}
   <div class="manual-step__heading page-width">
-    <h2><strong>Step {{section.settings.step_number}}</strong> {{section.settings.title}}</h2>
+    <h2>
+      <strong>Step {{ section.settings.step_number }}</strong>
+      {{ section.settings.title }}</h2>
   </div>
   <div class="manual-step {% unless section.settings.full_width %} page-width{% endunless %}">
-    <div class="manual-step__image click-zoom-container tw-overflow-hidden">
-      {% if section.settings.image %}
-        {{section.settings.image |  image_url: width: 1000 |  image_tag}}
-      {% endif %}
+    <div class="manual-step__image" {{ block.shopify_attributes }}>
+      <swiper-container
+        loop="true"
+        navigation="true"
+        pagination="true"
+        pagination-type="fraction">
+
+        {% for block in section.blocks %}
+          {% if block.type == "image" %}
+            <swiper-slide class="click-zoom-container tw-overflow-hidden">
+              {% if block.settings.image != blank %}
+                {{ block.settings.image | image_url: width: 1000 | image_tag }}
+              {% else %}
+                {{ 'hero-apparel-1' | placeholder_svg_tag: 'placeholder-svg' }}{% endif %}
+
+            </swiper-slide>
+          {% endif %}
+        {% endfor %}
+      </swiper-container>
     </div>
     <div class="manual-step__content">
       <ul>
         {% for block in section.blocks %}
-          <li class="manual-step-bullet manual-step-bullet__{{block.settings.type}}" {{ block.shopify_attributes }}>
-            <div class="manual-step-bullet__bullet">
-              {{ forloop.index }}
-            </div>
-            <div class="tw-w-full">
-              {{ block.settings.text }}
-            </div>
-          </li>
+          {% if block.type == "bullet" %}
+            <li class="manual-step-bullet manual-step-bullet__{{block.settings.type}}" {{ block.shopify_attributes }}>
+              <div class="manual-step-bullet__bullet">
+                {% case block.settings.type %}
+                  {% when "default" %}
+                    {{ forloop.index }}
+                  {% when "caution" %}
+                    {{ 'lucide-triangle-alert.svg' | inline_asset_content }}
+                  {% when "tip" %}
+                    {{ 'lucide-lightbulb.svg' | inline_asset_content }}
+                {% else %}
+                <!-- You can handle any unexpected cases here if needed -->
+                {% endcase %}
+              </div>
+              <div class="tw-w-full">
+                {{ block.settings.text }}
+              </div>
+            </li>
+          {% endif %}
         {% endfor %}
       </ul>
     </div>
@@ -169,11 +227,6 @@
         "type": "text",
         "id": "title",
         "label": "Step title"
-      },
-      {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Image"
       },
       {
         "type": "range",
@@ -238,6 +291,17 @@
             "id": "text",
             "label": "Bullet text",
             "default": "<p>Bullet text</p>"
+          }
+        ]
+      },
+      {
+        "type": "image",
+        "name": "Image",
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "Image"
           }
         ]
       }
