--- a/sections/bento.liquid
+++ b/sections/bento.liquid
@@ -31,7 +31,7 @@
     min-height: {{ section.settings.row_height | times: 0.67 | round: 0 }}px;
     position: relative;
     overflow: hidden;
-    border-radius: 1.5rem;
+    border-radius: {{section.settings.tile_radius}}px;
   }
 
   .bento-background-image-{{ section.id }} {
@@ -465,6 +465,16 @@
         "default": 16
       },
       {
+        "type": "range",
+        "id": "tile_radius",
+        "default": 15,
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "unit": "px",
+        "label": "Tile border radius"
+      },
+      {
         "type": "text",
         "id": "anchor",
         "label": "Anchor"
@@ -581,7 +591,7 @@
             "id": "text_color",
             "label": "Text color",
             "info": "Override text color from color scheme"
-          },
+          }
         ]
       },
       {
