--- a/sections/tc-manual-section.liquid
+++ b/sections/tc-manual-section.liquid
@@ -33,7 +33,6 @@
 
   .manual-step__heading strong {
     font-weight: bold;
-    margin-right: 2rem;
   }
 
   .manual-step__image,
@@ -134,6 +133,10 @@
     width: 40%;
     flex-shrink: 1;
     padding: 0 2rem;
+  }
+
+  .manual-step__heading strong {
+    margin-right: 2rem;
   }
 }
 
